[gd_scene load_steps=32 format=3 uid="uid://b67qjuigi4dvn"]

[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_mqtmi"]
[ext_resource type="Texture2D" uid="uid://csv6axkat2gqy" path="res://assets/ship.png" id="1_r7y1d"]
[ext_resource type="Script" path="res://components/move_component.gd" id="2_ehosm"]
[ext_resource type="Script" path="res://components/stats_component.gd" id="2_mw50h"]
[ext_resource type="Script" path="res://components/move_input_component.gd" id="3_xfx7j"]
[ext_resource type="Texture2D" uid="uid://cyrilc23jv0sy" path="res://assets/novos/ships/main/center.png" id="4_msxlj"]
[ext_resource type="Script" path="res://components/position_clamp_component.gd" id="5_vqpx2"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_26x81"]
[ext_resource type="Script" path="res://components/move_stats.gd" id="8_cm7xp"]
[ext_resource type="PackedScene" uid="uid://3c0cr3714r4k" path="res://projectiles/laser.tscn" id="8_ypby4"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="9_72otb"]
[ext_resource type="Texture2D" uid="uid://cmfx7uwiptxam" path="res://assets/ship_flame.png" id="10_svgp4"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="12_76ubl"]
[ext_resource type="Script" path="res://components/hurt_component.gd" id="13_6ric4"]
[ext_resource type="PackedScene" uid="uid://c7nmpf2186t1j" path="res://effects/explosion_effect.tscn" id="14_b7pps"]
[ext_resource type="Script" path="res://components/destroyed_component.gd" id="14_tctej"]
[ext_resource type="Script" path="res://components/variable_pitch_audio_stream_player.gd" id="16_u0wy7"]
[ext_resource type="Script" path="res://components/flash_component.gd" id="17_oh2ga"]
[ext_resource type="Script" path="res://components/shake_component.gd" id="18_o3ouu"]
[ext_resource type="AudioStream" uid="uid://6xm2bsol3b0l" path="res://sounds/damage_sfx.wav" id="21_yspmy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_an4xm"]
atlas = ExtResource("1_r7y1d")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkhua"]
atlas = ExtResource("1_r7y1d")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_h24ni"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_an4xm")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkhua")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_msxlj")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xn5im"]
atlas = ExtResource("10_svgp4")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_36k3p"]
atlas = ExtResource("10_svgp4")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7ayw"]
atlas = ExtResource("10_svgp4")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nitdh"]
atlas = ExtResource("10_svgp4")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4htw3"]
atlas = ExtResource("10_svgp4")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_osne7"]
atlas = ExtResource("10_svgp4")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_u31ju"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xn5im")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36k3p")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7ayw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nitdh")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4htw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_osne7")
}],
"loop": true,
"name": &"center",
"speed": 10.0
}]

[sub_resource type="Resource" id="Resource_ygh4f"]
script = ExtResource("8_cm7xp")
speed = 100

[node name="Ship" type="Node2D"]
script = ExtResource("1_mqtmi")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("2_mw50h")
health = 250

[node name="Anchor" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
position = Vector2(-1, -7.62939e-06)
scale = Vector2(0.013916, 0.0139974)
sprite_frames = SubResource("SpriteFrames_h24ni")
animation = &"center"
autoplay = "center"

[node name="FlameAnimatedSprite" type="AnimatedSprite2D" parent="Anchor"]
unique_name_in_owner = true
position = Vector2(-0.5, 16)
scale = Vector2(1.0625, 1)
sprite_frames = SubResource("SpriteFrames_u31ju")
animation = &"center"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_ehosm")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_xfx7j")
move_stats = SubResource("Resource_ygh4f")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_vqpx2")
actor = NodePath("..")

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-8, -4)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(6, -4)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_26x81")
scene = ExtResource("8_ypby4")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_72otb")
sprite = NodePath("../Anchor")

[node name="HurtboxComponent" type="Area2D" parent="."]
collision_mask = 6
script = ExtResource("12_76ubl")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtboxComponent"]
polygon = PackedVector2Array(-8, 2, -3, -3, -3, -4, -1, -7, 1, -7, 3, -4, 3, -3, 8, 2, 8, 4, 5, 4, 5, 7, -5, 7, -5, 4, -8, 4)

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component")]
script = ExtResource("13_6ric4")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")

[node name="ExplosionSpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_26x81")
scene = ExtResource("14_b7pps")

[node name="DestroyedComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats_component", "destroy_effect_spawner_component")]
script = ExtResource("14_tctej")
actor = NodePath("..")
stats_component = NodePath("../StatsComponent")
destroy_effect_spawner_component = NodePath("../ExplosionSpawnerComponent")

[node name="VariablePitchAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("16_u0wy7")

[node name="FlashComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("17_oh2ga")
sprite = NodePath("../Anchor/AnimatedSprite2D")

[node name="ShakeComponent" type="Node" parent="." node_paths=PackedStringArray("node")]
script = ExtResource("18_o3ouu")
node = NodePath("../Anchor")

[node name="damage_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_yspmy")
volume_db = -20.613

[connection signal="health_changed" from="StatsComponent" to="." method="_on_stats_component_health_changed"]
